@@ -1,3 +1,12 @@
+2020-09-10  Tim Horton  <timothy_horton@apple.com>
+
+        Upstream additional linked-on-or-after version checks
+        https://bugs.webkit.org/show_bug.cgi?id=216365
+
+        Reviewed by Sam Weinig.
+
+        * UIProcess/Cocoa/VersionChecks.h:
+
 2020-09-10  Adrian Perez de Castro  <aperez@igalia.com>
 
         [CMake] Use imported targets in find module for libseccomp
