@@ -1,3 +1,12 @@
+2020-09-10  Tim Horton  <timothy_horton@apple.com>
+
+        Upstream additional linked-on-or-after version checks
+        https://bugs.webkit.org/show_bug.cgi?id=216365
+
+        Reviewed by Sam Weinig.
+
+        * wtf/spi/darwin/dyldSPI.h:
+
 2020-09-10  Kate Cheney  <katherine_cheney@apple.com>
 
         Clean up App-Bound Domains code to only compile for iOS with its own macro
